# entm

./: .gitignore  JetsonSetup.md  NvidiaPlan.md  NvidiaRun.md  README.md  STT-TTS.md  ab_report_smoke.json  convert_ct2.py  des.txt  details.md  download_model.py  final.md  final.txt  jetsonNvidia.md  laptop_mic.py  load.py  main.py  pla.md  plan.md  pyproject.toml  requirements-pi.txt  requirements.txt  start.md  tramslate.py  translate.py  translate_ct2.py
.claude/: settings.json
deploy/: Containerfile  build_arm64.sh  build_on_pi.sh  it2-baremetal.service  it2.container  pi_bluetooth_autoconnect.sh  push_to_pi.sh
docs/: STT-TTS.md  compact-model.md  plan.md  reduceParams.md  runtimeRasp.md  start.md
en-indic-exp-mini/dev/eng_Latn-hin_Deva/: dev.eng_Latn  dev.hin_Deva
en-indic-exp-mini/train/eng_Latn-hin_Deva/: train.eng_Latn  train.hin_Deva
en-indic-exp/dev/eng_Latn-hin_Deva/: dev.eng_Latn  dev.hin_Deva
it2edge/: __init__.py  corpus_utils.py  download_compact_model.py  download_model.py  paths.py  tokenizer_utils.py
it2edge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
it2edge/convert/: __init__.py  convert_compact_ct2.py  convert_ct2.py  convert_ct2_dualvocab.py  export_onnx.py
it2edge/evaluate/: ab_compare_models.py  benchmark_models.py
it2edge/serve/: __init__.py  app.py  marian_ct2.py  speak.py  translate.py  translate_ct2.py
it2edge/train/: __init__.py  finetune_compact_marian.py  finetune_marian.py  finetune_qlora.py  merge_lora.py  prepare_data.py  prune_structured.py
nvidia/: README.md  __init__.py  build_trt_engines.sh  client.py  engine.py  it2-jetson.service  jetson_mic.py  marian_onnx.py  marian_trt.py  mic_client.py  protocol.py  requirements.txt  server.py  text_server.py  text_test.py  vad.py
requirements/: dev.txt  docker.txt  jetson.txt  laptop.txt  pi.txt
