[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "it2edge"
version = "0.2.0"
description = "Fine-tune, compress, and deploy MarianMT English→Hindi to an NVIDIA Jetson Nano"
requires-python = ">=3.8"

# Core deps for CTranslate2 translation + tokenizer. The Jetson voice pipeline
# pins these (floored for Python 3.8) in requirements/jetson.txt; heavy training
# tooling (torch, datasets, …) lives in requirements/dev.txt.
dependencies = [
    "ctranslate2",
    "transformers",
    "sentencepiece",
    "sacremoses",
    "protobuf",
]

[project.optional-dependencies]
dev = [
    "torch",
    "datasets",
    "accelerate",
    "evaluate",
    "sacrebleu",
    "huggingface_hub",
    "psutil",
]

[project.scripts]
it2-download = "it2edge.download_model:main"
it2-finetune = "it2edge.train.finetune_marian:main"
it2-convert-ct2 = "it2edge.convert.convert_ct2:main"
it2-benchmark = "it2edge.evaluate.benchmark_models:main"
it2-ab-compare = "it2edge.evaluate.ab_compare_models:main"
it2-prepare-data = "it2edge.train.prepare_data:main"

[tool.setuptools.packages.find]
include = ["it2edge*"]
